Website Angular Integration (with logos)

--- a/website/index.html
+++ b/website/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
-<html>
+<html ng-app="traffixApp" ng-controller="MainController">
     <head>
         <title>Traffix</title>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="javascript/jquery.js"></script>
 
+        <script src="javascript/angular.min.js"></script>
+        <script src="javascript/angular-route.js"></script>
+        <script src="javascript/bootstrap.min.js"></script>
         <script src="javascript/ui-bootstrap-tpls.js"></script>
+
+        <script src="MainController.js"></script>
 
         <link rel="stylesheet" type="text/css" href="stylesheets/homepage.css" />
         <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css" />
@@ -31,7 +36,7 @@
             </div>
 
             <div id="navbar_pages">
-                <span>Alerts</span>
+                <span><img src=""/>Alerts</span>
                 <span>Potential Hotspots</span>
                 <span>Settings</span>
             </div>
