Minor Changes to Footer

--- a/website/index.html
+++ b/website/index.html
@@ -57,15 +57,15 @@
             <div class="content">
 
                 <div id="timeline">
-                    Timeline
+                    TIMELINE
                 </div>
 
                 <div id="overlay">
-                    Overlay
+                    OVERLAY
                 </div>
 
                 <div id="panels">
-                    Panels
+                    PANELS
                 </div>
 
             </div>
