--- a/website/index.html
+++ b/website/index.html
@@ -56,15 +56,15 @@
         <!-- Content Here -->
 
         <footer class="footer">
-            <div class="content">
+            <div class="content container-fluid">
 
-                <div id="timeline">
+                <div id="timeline" class="col-md-4">
                     TIMELINE
 
                     <rzslider rz-slider-model="slider"></rzslider>
                 </div>
 
-                <div id="overlay">
+                <div id="overlay" class="col-md-4">
                     OVERLAY
                     <div id="overlay_checkbox">
                         <input type="checkbox">Traffic Flow</input>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
 
-                <div id="panels">
+                <div id="panels" class="col-md-4">
                     PANELS
                     <div id="panels_checkbox">
                         <input type="checkbox">Graphs</input>
