Updated slider not displaying correctly bug

--- a/website/index.html
+++ b/website/index.html
@@ -66,13 +66,14 @@
                     <div id="timeline" class="col-md-4">
                         TIMELINE
 
-                        <rzslider rz-slider-model="slider"></rzslider>
+                        <rzslider rz-slider-model="slider.value"
+                                  rz-slider-options="slider.options"></rzslider>
                     </div>
 
                     <div id="overlay" class="col-md-4">
                         OVERLAY
                         <div id="overlay_checkbox">
-                            <input type="checkbox">Traffic Flow</input>
+                            <input type="checkbox"/>Traffic Flow</input>
                             <input type="checkbox">Accidents</input>
                             <input type="checkbox">Potential Hotspots</input>
                         </div>
