--- a/website/index.html
+++ b/website/index.html
@@ -91,7 +91,7 @@
             </nav>
 
             <!-- Content Here -->
-            <div id='map' style='width: 100%;'></div>
+            <div id='map'></div>
 
             <footer class="footer">
                 <div class="content container-fluid">
@@ -123,16 +123,6 @@
                 </div>
             </footer>
         </div>
-
-        <script>
-            mapboxgl.accessToken = 'pk.eyJ1IjoidHVuZ2FsYmVydDk5IiwiYSI6ImNpcXhkbGplbTAxZnhmdm1nMjkycnE5ZjYifQ.nPjdhFFlu1agC8JmquUkkw';
-            var map = new mapboxgl.Map({
-                container: 'map',
-                style: 'mapbox://styles/tungalbert99/ciqxdskwv0007c4ktiubhssd4'
-            });
-
-            document.getElementById("map").height = window.innerHeight + "px";
-        </script>
 
     </body>
 </html>
