--- a/website/index.html
+++ b/website/index.html
@@ -10,14 +10,14 @@
         <script src="javascript/bootstrap.min.js"></script>
         <script src="javascript/rzslider.min.js"></script>
         <script src="javascript/ui-bootstrap-tpls.js"></script>
-        <script src='https://api.mapbox.com/mapbox-gl-js/v0.21.0/mapbox-gl.js'></script>
-
+        <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
+        
         <script src="MainController.js"></script>
 
         <link rel="stylesheet" type="text/css" href="stylesheets/homepage.css" />
         <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="stylesheets/rzslider.css" />
-        <link href='https://api.mapbox.com/mapbox-gl-js/v0.21.0/mapbox-gl.css' rel='stylesheet' />
+        <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
 
     </head>
     <body>
