Data Format and Accidents Displayed on Map

--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
         <script src="javascript/ui-bootstrap-tpls.js"></script>
         <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
         
-        <script src="MainController.js"></script>
+        <script src="mainController.js"></script>
 
         <link rel="stylesheet" type="text/css" href="stylesheets/homepage.css" />
         <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css" />
