Added External HTTP Requests and integration with Nodemon.
Test Functionality button triggers the HTTP Request to get the HTML of
google.com

--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,7 @@
 
         <script src="javascript/angular.min.js"></script>
         <script src="javascript/angular-route.js"></script>
+        <script src="node_modules/angular-resource/angular-resource.js"></script>
         <script src="javascript/bootstrap.min.js"></script>
         <script src="javascript/rzslider.min.js"></script>
         <script src="javascript/ui-bootstrap-tpls.js"></script>
@@ -113,6 +114,7 @@
                             <input type="checkbox">Accidents</input>
                             <input type="checkbox">Potential Hotspots</input>
                         </div>
+                        <button ng-click="testFunction()">Test functionality</button>
                     </div>
 
                     <div id="panels" class="col-md-4">
