--- a/ie-angular-ref-app/app/ie_details/ie_details.html
+++ b/ie-angular-ref-app/app/ie_details/ie_details.html
@@ -1,3 +1,5 @@
+<div id="map"></div>
+
 <div class="container-fluid" style="padding-left: 0px;">
   <div class="row equal">
     <!--begin panel 1 -->
