--- a/ie-angular-ref-app/app/index.html
+++ b/ie-angular-ref-app/app/index.html
@@ -19,7 +19,12 @@
 
 
   <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="map.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+
+  <!-- mapbox -->
+  <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
 </head>
 <body class="app">
   <div class="bodyDiv">
@@ -44,7 +49,9 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/moment/min/moment.min.js"></script>
   <script src="app.js"></script>
+  <script src="ie_details/jQuery-3.1.0.js"></script>
   <script src="ie_details/ie_route.js"></script>
+  <script src="ie_details/ie_maps.js"></script>
   <script src="ie_details/ie_controller.js"></script>
   <script src="ie_details/ie_service.js"></script>
   <script src="components/version/version.js"></script>
