Added toggling of layers

--- a/ie-angular-ref-app/app/ie_details/ie_details.html
+++ b/ie-angular-ref-app/app/ie_details/ie_details.html
@@ -90,6 +90,8 @@
   </div>
   <!-- end row -->
 
+  <input type="checkbox" ng-model="cameraStatus" ng-change="toggleCameraState(cameraStatus)">Cameras</input>
+  <input type="checkbox" ng-model="accidentStatus" ng-change="toggleAccidentState(accidentStatus)">Accidents</input>
 
   </div>
   <!-- end row -->
