Added Pedestrian HeatMap

--- a/ie-angular-ref-app/app/ie_details/ie_details.html
+++ b/ie-angular-ref-app/app/ie_details/ie_details.html
@@ -49,7 +49,9 @@
   <!-- end row -->
 
   <input type="checkbox" ng-model="cameraStatus" ng-change="toggleCameraState(cameraStatus)">Cameras</input>
-  <input type="checkbox" ng-model="accidentStatus" ng-change="toggleAccidentState(accidentStatus)">Accidents</input>
+  <input type="checkbox" ng-model="accidentStatus" ng-change="toggleAccidentState(
+  accidentStatus)">Accidents</input>
+  <input type="checkbox" ng-model="pedestrianStatus" ng-change="togglePedestrianState(pedestrianStatus)">Pedestrians</input>
 
   </div>
   <!-- end row -->
