--- a/ie-angular-ref-app/app/index.html
+++ b/ie-angular-ref-app/app/index.html
@@ -25,6 +25,8 @@
   <!-- mapbox -->
   <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
+  <!-- <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-heat/v0.1.3/leaflet-heat.js'></script> -->
+  <script type="text/javascript" src="ie_details/leaflet-heat.js"></script>
 </head>
 <body class="app">
   <div class="bodyDiv">
