Completed Cars + Bug Fixes

--- a/ie-angular-ref-app/app/ie_details/ie_details.html
+++ b/ie-angular-ref-app/app/ie_details/ie_details.html
@@ -51,7 +51,9 @@
   <input type="checkbox" ng-model="cameraStatus" ng-change="toggleCameraState(cameraStatus)">Cameras</input>
   <input type="checkbox" ng-model="accidentStatus" ng-change="toggleAccidentState(
   accidentStatus)">Accidents</input>
-  <input type="checkbox" ng-model="pedestrianStatus" ng-change="togglePedestrianState(pedestrianStatus)">Pedestrians</input>
+  <input type="checkbox" ng-model="pedestrianStatus" ng-change="togglePedestrianState(
+  pedestrianStatus)">Pedestrians</input>
+  <input type="checkbox" ng-model="carStatus" ng-change="toggleCarState(carStatus)">Cars</input>
 
   </div>
   <!-- end row -->
