--- a/ie-angular-ref-app/app/ie_details/ie_details.html
+++ b/ie-angular-ref-app/app/ie_details/ie_details.html
@@ -1,17 +1,25 @@
+<div class="header">
+	<div class="cont">
+		<p class="title"><b>Traffix</b> <span>/</span> San Diego</p>
+		<p class="loading" ng-show="loading"><img src="images/loading.gif"> Loading...</p>
+	</div>
+</div>
+
 <div id="map">
 	<div ng-show="showGraph" class="overlay">
-		<canvas id="myChart"></canvas>
+		<canvas id="myChart" height="200" width="300"></canvas>
+		<canvas id="speedOverTime" height="200" width="300"></canvas>
 	</div>
 </div>
 
 <div class="footer">
 	<div class="cont">
-		<input type="checkbox" ng-model="cameraStatus" ng-change="toggleCameraState(cameraStatus)">Cameras</input>
-		<input type="checkbox" ng-model="accidentStatus" ng-change="toggleAccidentState(
-		accidentStatus)">Accidents</input>
-		<input type="checkbox" ng-model="pedestrianStatus" ng-change="togglePedestrianState(
-		pedestrianStatus)">Pedestrians</input>
-		<input type="checkbox" ng-model="carStatus" ng-change="toggleCarState(carStatus)">Cars</input>
-		<input type="checkbox" ng-model="showGraph" ng-change="toggleGraph(showGraph)">Graphs</input>
+		<ul class="inline">
+			<li><input type="checkbox" ng-model="cameraStatus" ng-change="toggleCameraState(cameraStatus)"> GE smart LED streetlights</li>
+			<li><input type="checkbox" ng-model="accidentStatus" ng-change="toggleAccidentState(accidentStatus)"> Accidents</li>
+			<li><input type="checkbox" ng-model="pedestrianStatus" ng-change="togglePedestrianState(pedestrianStatus)"> Pedestrian Heatmap</li>
+			<li><input type="checkbox" ng-model="carStatus" ng-change="toggleCarState(carStatus)"> Car Heatmap</li>
+			<li><input type="checkbox" ng-model="showGraph" ng-change="toggleGraph(showGraph)"> Graphs</li>
+		</ul>
 	</div>
 </div>
