- Removed Speed Chart

--- a/ie-angular-ref-app/app/ie_details/ie_details.html
+++ b/ie-angular-ref-app/app/ie_details/ie_details.html
@@ -8,7 +8,7 @@
 <div id="map">
 	<div ng-show="showGraph" class="overlay">
 		<canvas id="myChart" height="200" width="300"></canvas>
-		<canvas id="speedOverTime" height="200" width="300"></canvas>
+		<!-- <canvas id="speedOverTime" height="200" width="300"></canvas> -->
 	</div>
 </div>
 
